# SDL_gpu_examples

./: .gitignore  BUILD.bazel  MODULE.bazel
Content/Images/: BUILD.bazel
Content/Shaders/Compiled/: BUILD.bazel
Examples/: BUILD.bazel  Common.c
bazel/: sdl3.BUILD.bazel  sdl3_image.BUILD.bazel  sdl3_ttf.BUILD.bazel
bazel/patches/: sdl3-image-module.patch  sdl3-module.patch  sdl3-ttf-module.patch
