module(name = "sdl_gpu_examples")

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "sdl3", version = "3.2.8")
archive_override(
    module_name = "sdl3",
    build_file = "@//bazel:sdl3.BUILD.bazel",
    integrity = "sha256-EziPq7Nh3naOzfK2XlK7J9EFTK5sy2lCupJuN44A2wM=",
    patches = ["bazel/patches/sdl3-module.patch"],
    strip_prefix = "SDL3-3.2.8",
    urls = ["https://github.com/libsdl-org/SDL/releases/download/release-3.2.8/SDL3-3.2.8.tar.gz"],
)

# Generate compile_commands.json with
# bazel run @hedron_compile_commands//:refresh_all
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "204aa593e002cbd177d30f11f54cff3559110bb9",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)
